Overflow added to main.css and index to fix iverflow of content

--- a/styles/main.css
+++ b/styles/main.css
@@ -199,3 +199,9 @@ li a:hover {
   footer a::before {
   font-size:48px;
   }
+
+  /* overflow correction  */
+
+  div#float{
+    overflow: auto;
+  }
